--- a/html/css/themes/default/main.css
+++ b/html/css/themes/default/main.css
@@ -1,3 +1,26 @@
+html, body {
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+	overflow: none;
+}
+
+#container {
+	background: black;
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	padding: 0px 0px 0px 0px;
+	margin: 0px 0px 0px 0px;
+	border-radius: 10px;
+}
+
+.pane {
+	display: none; /* will appear when layout inits */
+}
 
 #container .pane #bar{
 	margin: 0px;
